introduction.css
/* ... */
.technical-skill {
  display: grid;
  grid-template-columns: 1fr 2fr;
  gap: 30px;
  width: auto;
  align-items: center;
  justify-content: center;
  position: relative;
  margin: 50px 0 50px 0;
  padding: 0 50px 0 50px;
}

.technical-skill-image {
  max-width: 100%;
  height: auto;
  border-radius: 20px;
  border: #2d334a 2px solid;
}

.building-computer {
  padding: 10px;
}

.skill-section {
  width: 100vw;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 50px;
  align-items: center;
  justify-content: space-around;
  margin: 0 auto;
  padding-left: 50px;
  padding-right: 50px;
  margin-bottom: 50px;
}

.programming-language-card {
  border-radius: 10px;
  max-width: 100%;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
  background-color: #fff;
  text-align: center;
  transition: transform 0.5s ease-in-out, box-shadow 0.3s ease-in-out;
}

.programming-language-card:nth-child(2) {
  transition-delay: 400ms;
  transition: 1.4s;
}

.programming-language-card:nth-child(3) {
  transition-delay: 600ms;
  transition: 1.7s;
}

.programming-language-card:hover {
  transform: scale(1.1);
  box-shadow: 0px 8px 8px #6ea6f3;
}

.programming-language-card:hover {
  transform: translateX(2);
}

.skill-title {
  border-radius: 10px 10px 0 0;
  font-size: 20px;
  background-color: #6ea6f3;
  color: white;
  padding: 10px;
}

.skill-title h2 {
  margin: 0;
}
.programming-language-list {
  padding: 0;
}

.programming-language-item {
  margin: 5px 0;
  font-size: 2.2vmin;
}

/* Contact section */
.contact-section {
  height: 100vh;
  align-items: center;
  justify-content: space-between;
  padding: 3.5rem;
  display: grid;
  grid-template-columns: 5fr 1fr;
  gap: 30px;
  width: 100vw;
  background-color: #f5f9ff;
  position: relative;
}

.contact-text h2 {
  font-weight: 1000;
  font-size: 3rem;
}

.contact-social-icons {
  opacity: 0.8;
  padding-top: 30px;
  font-size: 32px;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contact-social-icons a {
  font-size: 4.5vh !important;
}

.contact-social-icons i {
  height: 3vh;
  margin-bottom: 15px;
  transition: 0.5s;
  color: black;
}

.contact-social-icons i:hover {
  transform: scale(1.3);
  opacity: 1;
  color: #6ea6f3;
}

.contact-form {
  display: grid;
  margin-top: 2.55rem;
  grid-template-columns: repeat(2, 1fr);
  column-gap: 2rem;
  row-gap: 1rem;
}

.input-wrap {
  position: relative;
}

.input-wrap.w-100 {
  grid-column: span 2;
}

.contact-input {
  width: 100%;
  background-color: white;
  padding: 1.5rem 1.35rem calc(0.75rem - 2px) 1.35rem;
  outline: none;
  border-radius: 30px;
  color: var(--text-color);
  font-weight: 600;
  font-size: 0.95rem;
  transition: 0.3s;
  border: 2px solid black;
  box-shadow: 0 0 0 0px;
}

.input-wrap label {
  position: absolute;
  top: 50%;
  left: calc(1.35rem + 2px);
  transform: translateY(-50%);
  color: grey;
  pointer-events: none;
  transition: 0.25s;
}

.input-wrap .icon {
  position: absolute;
  right: calc(1.35rem + 2px);
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  font-size: 1.25rem;
  transition: 0.3s;
}

textarea.contact-input {
  resize: none;
  width: 100%;
  min-height: 150px;
}

textarea.contact-input ~ label {
  top: 1.2rem;
  transform: none;
}

textarea.contact-input ~ .icon {
  top: 1.3rem;
  transform: none;
}

.forms-wraper {
  max-width: 32rem;
}

.input-wrap.focus .contact-input {
  background-color: white;
  border: 2px solid;
}

.input-wrap.focus .label {
  color: white;
  transform: scale(1.5);
}

.input-wrap.focus .icon {
  color: #6ea6f3;
}

.input-wrap.not-empty label {
  font-size: 0.66rem;
  top: 0.75rem;
  transform: translateY(0);
}

.contact-buttons {
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: 1rem;
  margin-top: 1rem;
  width: 100%;
  grid-column: span 2;
}

.send-button {
  width: 190px;
  height: 50px;
  padding: 10px 20px;
  background-color: #61a0ff;
  text-align: center;
  color: #ffffff;
  text-decoration: none;
  border-radius: 20px;
  font-size: 16px;
  border: none;
  cursor: pointer;
  transition: background-color 0.3s ease;
  display: flex;
  justify-content: center;
  align-items: center;
}

.send-button:hover {
  background-color: #4f8dff;
}

.loader {
  pointer-events: none;
  width: 30px;
  height: 30px;
  border-radius: 50%;
  border: 3px solid white;
  border-top-color: #61a0ff;
  animation: an1 1s ease infinite;
}

@keyframes an1 {
  0% {
    transform: rotate(0turn);
  }
  100% {
    transform: rotate(1turn);
  }
}

/* footer */
.footer {
  position: absolute;
  width: 100%;
  background-color: #f5f9ff;
  border-radius: 10px 10px 0 0;
  border: #6ea6f3 1px solid;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.footer a:hover {
  color: gold;
  transform: scale(1.2);
}

.menu {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.divider {
  height: 1px;
  background-color: #6ea6f3;
  width: 90%;
  margin: 10px 0;
}
.menu__link {
  font-size: 2.3vh;
  color: black;
  margin: 0 10px;
  display: inline-block;
  transition: 0.5s;
  text-decoration: none;
  opacity: 0.75;
  font-weight: 300;
}

.menu__link:hover {
  opacity: 1;
}

.footer p {
  color: black;
  opacity: 0.75;
  margin: 5px 0 5px 0;
  font-size: 1rem;
  font-weight: 300;
}

/* body blur */
.container-body#blur.active {
  filter: blur(20px);
  pointer-events: none;
  user-select: none;
  white-space: nowrap;
  overflow-y: hidden;
}

#popup {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 600px;
  padding: 20px;
  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
  border-radius: 20px;
  background: #fff;
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s, opacity 0.5s;
  text-align: center;
}

#popup h2 {
  color: #333;
  font-size: 24px;
  margin-bottom: 10px;
}

#popup p {
  color: #555;
  font-size: 16px;
  margin-bottom: 20px;
}
/* ... */

